# SameGameRL

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKPOINT_SYSTEM_PLAN.md  CLAUDE.md  DATABASE_MIGRATION_GUIDE.md  Dockerfile  HYBRID_BENCHMARK_USAGE.md  LICENSE  OPTIONAL_DEPENDENCIES.md  README.md  README.md.backup  benchmark_dqn_comparison.py  benchmark_greedy_singles.py  main.py  migrate_benchmarks.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
Bots/: DQN_bot.py  Training.py
Bots/Before_Color_Bug/: DQN_Model_Dense_long_gamma2_8_8.pth  DQN_Model_Dense_long_gamma5_15_15.pth
Game/: Tile.py  game_logic.py  game_params.py
flightgame/: main.py
flightgame/agents/: DQN_base_bot.py  DQN_bot.py  base_agent.py  dqn_agent.py  replay_buffer.py
flightgame/environments/: samegame_env.py
flightgame/evaluation/: plot_helper.py  visualize_agent.py
flightgame/game/: Tile.py  View.py  game.py  game_logic.py
flightgame/tests/: test_samegame_env.py
flightgame/training/: Training.py  train.py
samegamerl/: __init__.py  docker_main.py  main.py  run_training.py
samegamerl/agents/: __init__.py  base_agent.py  benchmark_bot_base.py  bot_utils.py  dqn_agent.py  dqn_agent_benchmark_adapter.py  greedy_singles_bot.py  largest_group_bot.py  random_bot.py  replay_buffer.py
samegamerl/database/: __init__.py  availability.py  connection.py  converters.py  init_db.py  models.py  repository.py  schema.sql
samegamerl/environments/: __init__.py  samegame_env.py
samegamerl/evaluation/: __init__.py  benchmark.py  benchmark_analysis.py  benchmark_creation.py  benchmark_data.py  benchmark_dataset.py  benchmark_execution_strategies.py  benchmark_plotting.py  benchmark_repository.py  benchmark_repository_factory.py  benchmark_repository_interface.py  benchmark_runner.py  benchmark_scripts.py  database_benchmark_repository.py  execution_strategies.py  plot_helper  plot_helper.py  validator.py  visualize_agent.py
samegamerl/experiments/: __init__.py  bot_performance_comparison.ipynb  conv_model.py  conv_model_experiment.ipynb  pyramid_model.py
samegamerl/game/: Tile.py  View.py  __init__.py  game.py  game_config.py  game_params.py
samegamerl/tests/: conftest.py  test_benchmark_repository.py  test_benchmark_system.py  test_bot_utils.py  test_checkpoint_data.py  test_checkpoint_service.py  test_checkpoint_state_extractor.py  test_database_repository.py  test_dqn_agent.py  test_dqn_agent_benchmark_adapter.py  test_game.py  test_greedy_singles_bot.py  test_largest_group_bot.py  test_optional_dependencies.py  test_pickle_checkpoint_repository.py  test_random_bot.py  test_replay_buffer.py  (+4 more)
scripts/: check_database_availability.py
(+41 files in other folders)
