[project]
name = "flightgame"
version = "0.1.0"
description = ""
authors = [
    {name = "patrickbarth",email = "patrick-barth-2012@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
name = "flightgame"
packages = [{ include = "flightgame" }]
